1999-08-05  Dominik Vogt  <domivogt@bvstp038.bbn.hp.com>

	* download.html: set latest beta to 2.3.6

Fri Jul  9 12:41:27 1999  DanEspen  <dje@blue>

	* links.html: Missed this one.

Thu Jul  1 22:05:22 1999  DanEspen  <dje@blue>

	* screenshot.html: was index.html, now separate.

	* cvs.html,docs.html,download.html,features.html,ftp.html,
	fvwm.gif,fvwm_smaller.gif,links.html,mailinglist.html,
	mod_changes.html,mod_concept.html,mod_f2m_communication.html,
	mod_initialization.html,mod_m2f_communication.html,
	mod_security.html,modules.html - from fvwm/docs

	* index.html: Changed index.html to be fvwm.org main page.
	Changed timestamp format so psgml mode will keep it current.
	Added link to screenshots.

1999-06-22  Dominik Vogt  <dominik_vogt@gmx.de>

	* index.html: added a screenshot of my desktop
