@@ -13,7 +13,7 @@
 Current packages:
 <ul>
 <li>
-Latest stable Release: <a href="ftp://ftp.fvwm.org/pub/fvwm/version-2/fvwm-2.2.tar.gz">2.2</a></li>
+Latest stable Release: <a href="ftp://ftp.fvwm.org/pub/fvwm/version-2/fvwm-2.2.2.tar.gz">2.2.2</a></li>
 
 <li>
 Latest Beta Version: <a href="ftp://ftp.fvwm.org/pub/fvwm/version-2/fvwm-2.3.6.tar.gz">2.3.6</a></li>
