@@ -16,7 +16,7 @@
 <h3><font color="yellow">NEWS FLASH!</font></h3>
 <blockquote>
 <p>
-FVWM 2.2, the first official version of FVWM 2, is now available for <a
+FVWM 2.2.2, a stable bugfix release, is now available for
 href="download.html">download</a>!
 
 <p>
@@ -58,7 +58,7 @@ mailing lists, a web site, an FTP site, a CVS tree, and anonymous rsync.
 Created: Jan 31, 1996
 <!-- Created: Thu Jul  1 22:03:12 EDT 1999 -->
 <!-- hhmts start -->
-Last modified: Thu Jul  1 22:08:06 EDT 1999
+Last modified: Thu Aug  5 15:51:08 EDT 1999
 <!-- hhmts end -->
 </body>
 </html>
