@@ -1,3 +1,7 @@
+Thu Aug  5 15:51:58 1999  DanEspen  <dje@blue>
+
+	* index.html,download.html: Make 2.2.2 the current release.
+
 1999-08-05  Dominik Vogt  <domivogt@bvstp038.bbn.hp.com>
 
 	* download.html: set latest beta to 2.3.6
